@@ -81,7 +81,7 @@ graphHelp2                = \\nEnter text like:\\n 800x600 \\n to create a graph
 graphHelp3                = \\nEnter text like:\\n 800x600 -10:100 #FFFFFF \\n to create a graph of 800x600 (pixels), focused on the y axis range (-10, +100), with a white background (#FFFFFF)
 graphHelp4                = \\n\\nIt is possible to specify one or more options. Blanks are mandatory. \\nSyntax: [WxH] [[-]y1:[-]y2] [#abcdef]
 pdfGraph                  = Pdf
-allItems                  = :: All Items
+allItems                  = All
 showGraphOptions			= Show:
 legend						= Legend
 labels						= Labels
