@@ -78,7 +78,7 @@ graphHelp2                = \\nEnter text like:\\n 800x600 \\n to create a graph
 graphHelp3                = \\nEnter text like:\\n 800x600 -10:100 #FFFFFF nolegend nolabels\\n to create a graph 800x600 (pixel)  focused on the y axis range (-10, +100) with a white background (#FFFFFF), without labels and legend
 graphHelp4                = \\nIt is possible to specify one or more options. Blanks are mandatory. \\n\\nSyntax: [WxH]|[[-]y1:[-]y2]|[#abcdef]|[nolegend]|[nolabels] 
 pdfGraph                  = Pdf
-allItems                  = :: All Items
+allItems                  = All
 showGraphOptions            = Show:
 legend                        = Legend
 labels                        = Labels
