@@ -9,7 +9,7 @@
 # A comment line begins with the # char
 
 EnableAuditing=Abilita Auditing
-allItems=:: Tutti
+allItems=Tutti
 anException=An exception raised during query execution:
 # link label to ART Support mailbox
 artSupport=Mailbox Supporto
