@@ -73,7 +73,7 @@ graphHelp2                = \\nEnter a text like:\\n 800x600 \\n to create a gra
 graphHelp3                = \\nEnter a text like:\\n 800x600 -10:100 #FFFFFF nolegend nolabels\\n to create a graph 800x600 (pixel)  focused on the y axis range (-10, +100) with a white background (#FFFFFF), without labels and legend
 graphHelp4                = \\nIt is possible to specify one or more options. Blanks are mandatory. \\n\\nSyntax: [WxH]|[[-]y1:[-]y2]|[#abcdef]|[nolegend]|[nolabels] 
 
-allItems                  = :: All Items
+allItems                  = All
 
 # QUERYEXECUTE servlet
 #
